--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,13 @@
             content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
         />
         <title>Happy Mini App</title>
+        <script type="importmap">
+        {
+            "imports": {
+                "socket.io-client": "https://cdn.socket.io/4.8.1/socket.io.esm.min.js"
+            }
+        }
+        </script>
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
     </head>
     <body>
