--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
         <meta name="description" content="AI-powered development assistant" />
 
         <!-- iOS PWA Meta Tags -->
+        <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="apple-mobile-web-app-title" content="HAPI" />
